<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World!</string>
    <string name="app_name">Mobile Toledo</string>
<string name="username">Username:</string>
<string name="password">Password:</string>
<string name="login">Log in</string>
<string name="rememberme">Remember me!</string>
<string name="quit">Quit</string>
<string name="mobiletoledo">Gelieve eerst in te loggen</string>
<string name="mainmenu">Hoofdmenu</string>
<string name="compass">Navigatie</string>
<string name="calendar">Kalender</string>
<string name="course">Vakken</string>
<string name="showlocation">Show location!</string>
<string name="message">Boodschap:</string>
<string name="title">Titel:</string>
<string name="submit">Ingeven</string>
<string name="reset">Reset</string>
<string name="interaction">Interactie</string>
<string name="ownlocation">Eigen locatie</string>
<string name="announcements">Aankondigingen bekijken</string>
<string name="questions">Vragen stellen</string>
<string name="questionanswering">Vragen beantwoorden</string>
<string name="interactionmenu">Mogelijke interacties</string>
<string name="course_prompt">Selecteer een vak</string>
<string name="menu_newuser">Add new user</string>
<string name="confirmpassword">Confirm Password</string>
<string name="createuser">Create user</string>
<string name="posemultiplechoice">Meerkeuzevraag stellen</string>
<string name="multiplechoice">Meerkeuzevraag beantwoorden</string>
<string name="question">Vraag:</string>
<string name="navigate">Navigeer naar...</string>
<string name="locationinfo">Info van locatie</string>
<string name="multiple">Meerkeuzevraag beantwoorden</string>
<string name="location">$s</string>
<string name="stats">Statistieken</string>
<string name="vanadres">OF Van (adres):</string>
<string name="vangebouw"> Van (gebouw):</string>
<string name="naargebouw">Naar (gebouw):</string>
<string name="naaradres">OF Naar (adres):</string>
<string name="navigeer">Navigeer!</string>
<string name="terug">terug</string>
</resources>
