<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation = "vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  
  <ImageView android:id="@+id/toledologo"
  	android:layout_marginTop="5px"
  	android:src="@drawable/toledo_logo"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content" 
  	android:scaleType="center"/>

  <LinearLayout
  android:orientation = "vertical"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content">
  <TextView android:id="@+id/username" 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/username" />
	<EditText android:id="@+id/username"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"/>
	<TextView android:id="@+id/password"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/password" />
	<EditText android:id="@+id/password"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:password="true"/>
		</LinearLayout>
	<CheckBox android:id="@+id/rememberme"
 		android:text="@string/rememberme"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content" />
 		 <LinearLayout
  		android:orientation = "horizontal"
  		android:layout_width="match_parent"
  		android:layout_height="match_parent"
  		>
	<Button android:id="@+id/login"
		android:layout_gravity="center"
	 	android:text="@string/login"
	 	android:layout
	  	android:layout_width="wrap_content"
	  	android:layout_height="wrap_content" />
  	</LinearLayout>
</LinearLayout>
