<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  style="@style/GenLayout">
	  <LinearLayout
	  	android:orientation = "vertical"
	  	android:layout_width="fill_parent"
	  	android:layout_height="wrap_content"
	  	android:layout_marginTop="10dip"
  	android:layout_marginLeft="5dip"
  	android:layout_marginRight="5dip">
	  		<TextView android:id="@+id/question"
			android:layout_width="wrap_content"
			android:layout_height="fill_parent" 
			android:text="@string/question" 
			style="@style/FontStyle1"/>
			<EditText android:id="@+id/mquestion"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="3" />
		</LinearLayout>
		<FrameLayout
  		android:layout_width="match_parent"
  		android:layout_height="match_parent"
  		android:layout_marginTop="10dip"
  	android:layout_marginLeft="5dip"
  	android:layout_marginRight="5dip">
		  	<Button android:id="@+id/reset"
		 	android:text="@string/reset"
		  	android:layout_height="wrap_content"
		  	android:layout_width="wrap_content"/>
			<Button android:id="@+id/submit"
		 	android:text="@string/submit"
		  	android:layout_height="wrap_content"
		  	android:layout_width="wrap_content"/>
		</FrameLayout>
</LinearLayout>
