<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  
  <LinearLayout
  android:orientation="horizontal"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content">
		 <ImageButton
		  android:id="@+id/ownlocationbutton"
		  android:src="@drawable/compassbutton"
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content"/>
		  <TextView
		  android:id="@+id/ownlocation"
		  android:text="@string/ownlocation"
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content"
		  android:layout_gravity="center"/>  


 </LinearLayout>
 
 <LinearLayout
  android:orientation="horizontal"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content">
		  <ImageButton
		  android:id="@+id/navigatebutton"
		  android:src="@drawable/compassbutton"
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content"/>
		  <TextView
		  android:id="@+id/navigate"
		  android:text="@string/navigate"
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content"
		  android:layout_gravity="center"/>
 </LinearLayout>
	  
 <LinearLayout
 android:orientation="horizontal"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content">
		  <ImageButton
		  android:id="@+id/locationinfobutton"
		  android:src="@drawable/compassbutton"
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content"/>
		  <TextView
		  android:id="@+id/locationinfo"
		  android:text="@string/locationinfo"
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content"
		  android:layout_gravity="center"/>
  </LinearLayout>
  
  </LinearLayout>
