<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  style="@style/GenLayout">
  	  <LinearLayout
	  	android:orientation = "vertical"
	  	android:layout_width="fill_parent"
	  	android:layout_height="wrap_content"
	  	android:layout_marginTop="10dip"
  		android:layout_marginLeft="5dip"
  		android:layout_marginRight="5dip">
	  		<TextView android:id="@+id/multi" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/question" 
			style="@style/FontStyle1"/>
			<EditText android:id="@+id/mmulti"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"/>
			<TextView android:id="@+id/answ1" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="Antwoord 1:" 
			style="@style/FontStyle1"/>
			<EditText android:id="@+id/mansw1"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="2"/>
			<TextView android:id="@+id/answ2" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="Antwoord 2:" 
			android:visibility="gone"
			style="@style/FontStyle1"/>
			<EditText android:id="@+id/mansw2"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:visibility="gone"/>
			<TextView android:id="@+id/answ3" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="Antwoord 3:" 
			android:visibility="gone"
			style="@style/FontStyle1"/>
			<EditText android:id="@+id/mansw3"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:visibility="gone"/>
			<TextView android:id="@+id/answ4" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="Antwoord 4:"
			android:visibility="gone" 
			style="@style/FontStyle1"/>
			<EditText android:id="@+id/mansw4"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:visibility="gone"/>
			<TextView android:id="@+id/answ5" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="Antwoord 5:" 
			android:visibility="gone"
			style="@style/FontStyle1"/>
			<EditText android:id="@+id/mansw5"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:visibility="gone"/>
		</LinearLayout>
		<FrameLayout
  		android:layout_width="match_parent"
  		android:layout_height="match_parent"
  		android:layout_marginTop="10dip">
		  	<Button android:id="@+id/reset1"
		 	android:text="@string/reset"
		  	android:layout_height="wrap_content"
		  	android:layout_width="wrap_content"
		  	android:layout_gravity="left"/>
			<Button android:id="@+id/submit1"
		 	android:text="@string/submit"
		  	android:layout_height="wrap_content"
		  	android:layout_width="wrap_content"
		  	android:layout_gravity="right"/>
		</FrameLayout>
</LinearLayout>
